# iscc_lidar_team

hwamok_lidar/devel/: .catkin  local_setup.sh
hwamok_lidar/devel/include/lidar_object_detector/: ObjectInfo.h  Trafficcone.h  traffic_hyper_parameterConfig.h
hwamok_lidar/devel/include/lidar_team_1/: Boundingbox.h  Delivery.h  DriveValues.h  DynamicVelocity.h  Waypoint.h  traffic_hyper_parameterConfig.h  traffic_hyper_parameter_leftConfig.h  traffic_hyper_parameter_rightConfig.h
hwamok_lidar/devel/lib/lidar_object_detector/: traffic_cone
hwamok_lidar/devel/lib/lidar_team_1/: traffic_cone  traffic_cone_left  traffic_cone_right
hwamok_lidar/devel/lib/pkgconfig/: lidar_object_detector.pc  lidar_team_1.pc  velodyne_driver.pc  velodyne_laserscan.pc  velodyne_msgs.pc  velodyne_pcl.pc  velodyne_pointcloud.pc  waypoint_maker.pc
hwamok_lidar/devel/lib/velodyne_driver/: velodyne_node
hwamok_lidar/devel/lib/velodyne_laserscan/: velodyne_laserscan_node
hwamok_lidar/devel/lib/velodyne_pointcloud/: transform_node
hwamok_lidar/devel/lib/waypoint_maker/: waypoint_maker
hwamok_lidar/devel/share/lidar_object_detector/cmake/: lidar_object_detector-msg-extras.cmake  lidar_object_detector-msg-paths.cmake  lidar_object_detectorConfig.cmake
hwamok_lidar/devel/share/lidar_object_detector/docs/: traffic_hyper_parameterConfig-usage.dox  traffic_hyper_parameterConfig.dox  traffic_hyper_parameterConfig.wikidoc
hwamok_lidar/devel/share/lidar_team_1/cmake/: lidar_team_1Config.cmake
hwamok_lidar/devel/share/lidar_team_1/docs/: traffic_hyper_parameterConfig-usage.dox  traffic_hyper_parameter_leftConfig-usage.dox  traffic_hyper_parameter_rightConfig-usage.dox  traffic_hyper_parameter_rightConfig.dox  traffic_hyper_parameter_rightConfig.wikidoc
hwamok_lidar/devel/share/velodyne_driver/cmake/: velodyne_driverConfig.cmake
hwamok_lidar/devel/share/velodyne_laserscan/cmake/: velodyne_laserscanConfig.cmake
hwamok_lidar/devel/share/velodyne_msgs/cmake/: velodyne_msgs-msg-extras.cmake  velodyne_msgs-msg-paths.cmake  velodyne_msgsConfig.cmake
hwamok_lidar/devel/share/velodyne_pcl/cmake/: velodyne_pclConfig.cmake
hwamok_lidar/devel/share/velodyne_pointcloud/cmake/: velodyne_pointcloudConfig.cmake
hwamok_lidar/devel/share/waypoint_maker/cmake/: waypoint_maker-msg-extras.cmake  (+2 more)
hwamok_lidar/src/lidar_object_detector/: CMakeLists.txt
hwamok_lidar/src/lidar_object_detector/cfg/: traffic_hyper_parameter.cfg
hwamok_lidar/src/lidar_object_detector/src/: traffic_cone.cpp
hwamok_lidar/src/lidar_trafficcone_detection/: CMakeLists.txt
hwamok_lidar/src/lidar_trafficcone_detection/cfg/: traffic_hyper_parameter.cfg
hwamok_lidar/src/lidar_trafficcone_detection/src/: header.h  traffic_cone.cpp
hwamok_lidar/src/static_obstacle_detection/: CMakeLists.txt  package.xml
hwamok_lidar/src/static_obstacle_detection/cfg/: static_hyper_parameter.cfg
hwamok_lidar/src/static_obstacle_detection/launch/: static_obstacle.launch
hwamok_lidar/src/static_obstacle_detection/src/: header.h  static_obstacle.cpp
hwamok_lidar/src/waypoint_maker/: CMakeLists.txt  package.xml
hwamok_lidar/src/waypoint_maker/include/: waypoint_maker.h
hwamok_lidar/src/waypoint_maker/launch/: waypoint_maker.launch
hwamok_lidar/src/waypoint_maker/src/: drawing_path.py  waypoint_maker.cpp
sensor_fusion_final_2024/.catkin_tools/profiles/default/: devel_collisions.txt
sensor_fusion_final_2024/src/camera/: CMakeLists.txt
sensor_fusion_final_2024/src/camera/launch/: traffic_cone.launch  traffic_cone_morai.launch
sensor_fusion_final_2024/src/camera/src/: camera_test.py  detect_traffic_cone.py  detect_traffic_cone_left.py  detect_traffic_cone_left_morai.py  detect_traffic_cone_morai.py  detect_traffic_cone_right.py  detect_traffic_cone_right_morai.py  single_camera_test.py
sensor_fusion_final_2024/src/fusion/: CMakeLists.txt  package.xml
sensor_fusion_final_2024/src/fusion/launch/: test.launch  traffic_cone_sensor_fusion.launch
sensor_fusion_final_2024/src/fusion/msg/: YoloTrafficCone.msg  clustering_points.msg
sensor_fusion_final_2024/src/fusion/src/: fusion_just_overlay.py  fusion_left.py  fusion_main.py  fusion_path_planner.py  fusion_path_planner_left.py  fusion_path_planner_right.py  sort.py
sensor_fusion_final_2024/src/lidar/lidar_trafficcone_detection/: CMakeLists.txt
sensor_fusion_final_2024/src/lidar/lidar_trafficcone_detection/cfg/: traffic_hyper_parameter.cfg
sensor_fusion_final_2024/src/lidar/lidar_trafficcone_detection/launch/: traffic_cone.launch
sensor_fusion_final_2024/src/lidar/lidar_trafficcone_detection/src/: traffic_cone copy.cpp  traffic_cone.cpp
sensor_fusion_final_2024/src/lidar/waypoint_maker/: CMakeLists.txt
(+51 files in other folders)
